style.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);


html, body {
    background-color: #ECF0F1;
}

body {
    color: #888;   
    text-rendering: optimizespeed;
}

a {
    color: #03a1d1;
    text-decoration: none !important;
}


/* Search Form */
form {
    width: 320px;
    margin: 20px;
}

form > div {
    position: relative;
    overflow: hidden;
}

form input, form textarea {
    width: 100%;
    border: 2px solid gray;
    background: none;
    position: relative;
    top: 0;
    left: 0;
    z-index: 1;
    padding: 8px 12px;
    outline: 0;
}

form input:valid, form textarea:valid {
    background: white;
}

form input:focus, form textarea:focus {
    border-color: #357EBD;
}

form input:focus + label, form textarea:focus + label {
    background: #357EBD;
    color: white;
    font-size: 70%;
    padding: 1px 6px;
    z-index: 2;
    text-transform: uppercase;
}

form label {
    -webkit-transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
    transition: background 0.2s, color 0.2s, top 0.2s, bottom 0.2s, right 0.2s, left 0.2s;
    position: absolute;
    color: #999;
    padding: 7px 6px;
    font-weight: normal;
    z-index: 9999;
}

form textarea {
    display: block;
    resize: vertical;
}

form.go-bottom input, form.go-bottom textarea {
    padding: 12px 12px 12px 12px;
}

form.go-bottom label {
    top: 0;
    bottom: 0;
    left: 0;
    width: 100%;
}

form.go-bottom input:focus, form.go-bottom textarea:focus {
    padding: 4px 6px 20px 6px;
}

form.go-bottom input:focus + label, form.go-bottom textarea:focus + label {
    top: 100%;
    margin-top: -16px;
}

form.go-right label {
    border-radius: 0 5px 5px 0;
    height: 100%;
    top: 0;
    right: 100%;
    width: 100%;
    margin-right: -100%;
}

form.go-right input:focus + label, form.go-right textarea:focus + label {
    right: 0;
    margin-right: 0;
    width: 40%;
    padding-top: 5px;
}

*:focus {
    outline: none;
}

.btn:not(a) {
    border: 0;
    border-bottom: 0;
    border-left: 0;
    font-weight: '900';
    font-family: 'Ubuntu', sans-serif;
    box-shadow: inset 0 -3.2px rgba(0, 0, 0, 0.12), inset 2px 0 rgba(0, 0, 0, 0.1);
    outline: none;
    -webkit-outline: none;
    -o-outline: none;
    -moz-outline: none;
}

.btn:active:not(a), .btn.active {
    outline: 0;
    -webkit-outline: 0;
    -moz-outline: 0; 
    background-image: none; 
    -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125) !important;
    position: relative;
    box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125) !important;
    top: 1px;
    left:-1px;
}

.btn:focus:not(a) {
    outline: 0;
    -webkit-outline: 0;
    -moz-outline: 0;
}

.btn-sm {
    padding-top: 1.5px;
}

/* Search Results */
.list-inline>li {
    padding: 0 10px 0 0;
}
.container-pad {
    padding: 30px 15px;
}

.bgc-fff {
    background-color: #fff!important;
}
.box-shad {
    -webkit-box-shadow: 1px 1px 0 rgba(0,0,0,.2);
    box-shadow: 1px 1px 0 rgba(0,0,0,.2);
}
.brdr {
    border: 1px solid #ededed;
}

/* Font changes */
.fnt-smaller {
    font-size: .9em;
}
.fnt-lighter {
    color: #bbb;
}

/* Padding - Margins */
.pad-10 {
    padding: 10px!important;
}
.mrg-0 {
    margin: 0!important;
}
.btm-mrg-10 {
    margin-bottom: 10px!important;
}
.btm-mrg-20 {
    margin-bottom: 20px!important;
}

/* Color  */
.clr-535353 {
    color: #535353;
}

/**** MEDIA QUERIES ****/
@media only screen and (max-width: 991px) {
    #property-listings .property-listing {
        padding: 5px!important;
    }
    #property-listings .property-listing a {
        margin: 0;
    }
    #property-listings .property-listing .media-body {
        padding: 10px;
    }
}

@media only screen and (min-width: 992px) {
    #property-listings .property-listing img {
        max-width: 180px;
    }
}


/* Scroll Button */
.back-to-top {
    cursor: pointer;
    position: fixed;
    bottom: 60px;
    right: 20px;
    display:none;
}

